--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,12 +1,15 @@
 name: Check Commit Messages
-on: push
+on:
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   check-commit-messages:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Check commit messages
         run: |
