--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,6 @@
 name: Check Commit Messages
 on:
-  pull_request_target:
+  pull_request:
     branches: [ main ]
   workflow_dispatch:
 
@@ -13,7 +13,7 @@ jobs:
 
       - name: Check commit messages
         run: |
-          COMMIT_MSG=$(git log -1 --pretty=format:%s)
+          COMMIT_MSG=$(git log --format=%B -n 1 ${{ github.sha }})
           echo $COMMIT_MSG
           if [[ $COMMIT_MSG =~ .*AC-1234.* ]]; then
             echo "Commit message contains AC-1234."
