--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Check commit messages
         run: |
           COMMIT_MSG=$(git log --format=%B -n 1 ${{ github.sha }})
+          echo "Commit message: $COMMIT_MSG"
           if [[ $COMMIT_MSG =~ .*AC-1234.* ]]; then
             echo "Commit message contains AC-1234."
           else
