--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Read allowed branches from file
         run: |
-          mapfile -t ALLOWED_BRANCHES < .github/allowed_branches.txt
+          mapfile -t ALLOWED_BRANCHES < ./allowed_branches.txt
 
       - name: Extract branch name
         id: branch-name
