--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
           echo "Source branch: $BRANCH_NAME"
+          echo ${ALLOWED_BRANCHES[*]}
           
           if [[ ! " ${ALLOWED_BRANCHES[*]} " =~ " ${BRANCH_NAME} " ]]; then
             echo "The branch is not allowed for merging."
