--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,11 +24,11 @@ jobs:
         run: |
           BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
           echo $BRANCH_NAME >> $GITHUB_ENV
-          echo "Source branch: $BRANCH_NAME"
-          echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
+          # echo "Source branch: $BRANCH_NAME"
+          # echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
           
           if [[ ! " ${ALLOWED_BRANCHES[*]} " =~ " ${BRANCH_NAME} " ]]; then
-            echo "The branch is not allowed for merging."
+            echo "The branch is NOT allowed for merging."
             exit 1
           else
             echo "The branch is allowed for merging."
