--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Check if branch is allowed
         run: |
           BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
-          echo $BRANCH_NAME >> $GITHUB_ENV
+          echo BRANCH_NAME >> $GITHUB_ENV
           # echo "Source branch: $BRANCH_NAME"
           # echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
           
