--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Check if branch is allowed
         run: |
           echo "BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_ENV
-          # echo "Source branch: $BRANCH_NAME"
-          # echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
+          echo "Source branch: $BRANCH_NAME"
+          echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
           
           if [[ ! " ${ALLOWED_BRANCHES[*]} " =~ " ${BRANCH_NAME} " ]]; then
             echo "The branch is NOT allowed for merging."
