--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,8 @@
-- name: Check PR Source Branch
-  on:
-    pull_request:
-      branches: [ main ]
-    workflow_dispatch:
+name: Check PR Source Branch
+on:
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   check-pr-source-branch:
