--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: Check if branch is allowed
         run: |
-          echo "BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_ENV
+          # echo "BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_ENV
+          BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
           echo "Source branch: $BRANCH_NAME"
           echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
           
