--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,12 +22,11 @@ jobs:
 
       - name: Check if branch is allowed
         run: |
-          # echo "BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_ENV
           BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
           echo "Source branch: $BRANCH_NAME"
           echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
           
-          if [[ ! " ${ALLOWED_BRANCHES[*]} " =~ " ${BRANCH_NAME} " ]]; then
+          if [[ ! "${ALLOWED_BRANCHES[*]}" =~ "^${BRANCH_NAME}" ]]; then
             echo "The branch is NOT allowed for merging."
             exit 1
           else
