--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,10 +23,12 @@ jobs:
       - name: Check if branch is allowed
         run: |
           BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
+          JIRA_NUM=$(echo "$BRANCH_NAME" | grep -oE 'AC-[0-9]{4}')
           echo "Source branch: $BRANCH_NAME"
+          echo "Jira ticket: $JIRA_NUM"
           echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
           
-          if [[ ! "${ALLOWED_BRANCHES[*]}" =~ "^${BRANCH_NAME}" ]]; then
+          if [[ ! "${ALLOWED_BRANCHES[*]}" =~ "${BRANCH_NAME}" ]]; then
             echo "The branch is NOT allowed for merging."
             exit 1
           else
