--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Check if branch is allowed
         run: |
           BRANCH_NAME=${{ steps.branch-name.outputs.current_branch }}
-          JIRA_NUM=$(echo "$BRANCH_NAME" | grep -oE 'AC-[0-9]{4}')
+          JIRA_NUM=$(echo "$BRANCH_NAME" | grep -oE '^AC-[0-9]{4}')
           echo "Source branch: $BRANCH_NAME"
           echo "Jira ticket: $JIRA_NUM"
           echo "Allowed branches: ${ALLOWED_BRANCHES[*]}"
